<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_color"
        android:paddingBottom="30dp"
        android:id="@+id/topView"
        >
        <TextView
            android:id="@+id/rentickle"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:text="@string/rentickle"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/gurgaon"
            android:layout_below="@+id/rentickle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:text="@string/gurgaon"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/rentickle"
            android:layout_toRightOf="@id/gurgaon"
            android:src="@drawable/down_arrow"
            android:layout_width="10dp"
            android:layout_height="10dp"
            />
        <EditText
            android:layout_marginTop="35dp"
            android:layout_below="@+id/gurgaon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_search"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="Search for Furniture, appllances etc. "
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:drawablePadding="5dp"
            android:textColor="@color/black"

            />
    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        >
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:text="@string/ourCategories"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_margin="10dp"
            >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"

                >
                <ImageView
                    android:src="@drawable/ic_baseline_king_bed_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:text="Bed Room"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                >
                <ImageView
                    android:src="@drawable/ic_baseline_meeting_room_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:text="Living Room"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                >
                <ImageView
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:text="DSLR Camera"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                >
                <ImageView
                    android:src="@drawable/ic_baseline_app_settings_alt_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:text="Applications"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                >
                <ImageView
                    android:src="@drawable/ic_baseline_sd_storage_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:text="    Storage   "
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                >
                <ImageView
                    android:src="@drawable/ic_baseline_backpack_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:text="     Packages   "
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:text="@string/trending"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trendingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:text="@string/recent"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="70dp"
            />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>